# vmware-workstation-pro-mcp-server

./: README.md  README_zh.md  main.py  pyproject.toml
.github/workflows/: workflow.yml
src/vmware_workstation_pro_mcp_server/: __init__.py  __main__.py  server.py
src/vmware_workstation_pro_mcp_server/api/: __init__.py  tools.py
src/vmware_workstation_pro_mcp_server/client/: __init__.py  vmware_client.py
src/vmware_workstation_pro_mcp_server/config/: __init__.py  settings.py
src/vmware_workstation_pro_mcp_server/models/: __init__.py  vm.py
src/vmware_workstation_pro_mcp_server/utils/: __init__.py  logging.py
vmware_workstation_pro_mcp_server/: __init__.py  server.py  vmware_client.py
