[project]
name = "vmware-workstation-pro-mcp-server"
version = "0.1.9"
description = "A MCP server for managing VMware Workstation Pro VMs via REST API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "fastmcp>=2.13.0.2",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
]

[project.scripts]
vmware-workstation-pro-mcp-server = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "README.md",
    "LICENSE",
]

[tool.hatch.build]
sources = ["src"]